Adwaita: Make sure selections are visible in infobars
Pointed out in https://bugzilla.gnome.org/show_bug.cgi?id=745622

--- a/gtk/theme/Adwaita/_common.scss
+++ b/gtk/theme/Adwaita/_common.scss
@@ -3017,6 +3017,11 @@ GtkInfoBar {
       }
     }
   }
+  .label:selected,
+  .label:selected:focus,
+  .label:selected:hover {
+    background-color: darken($selected_bg_color, 10%);
+  }
 }
 
 /************
